--- a/GuestRegistrationDeskUI/Views/MainScreenView.xaml
+++ b/GuestRegistrationDeskUI/Views/MainScreenView.xaml
@@ -20,12 +20,14 @@
                             <ColumnDefinition Width="auto" />
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="auto" MinHeight="35"/>
-                            <RowDefinition Height="auto" MinHeight="35"/>
-                            <RowDefinition Height="auto" MinHeight="35"/>
-                            <RowDefinition Height="auto" MinHeight="35"/>
-                            <RowDefinition Height="auto" MinHeight="35"/>
-                            <RowDefinition Height="auto" MinHeight="35"/>
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="auto" />
                             <RowDefinition/>
                         </Grid.RowDefinitions>
                         <Label Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Padding="5 5" Width="92" Margin="25,10,0,10" Height="34" >Name:</Label>
@@ -41,19 +43,26 @@
                         <TextBox x:Name="Nationality" Text="{Binding visitorNationality, Mode=TwoWay}" Grid.Column="1" HorizontalAlignment="Left" Height="38" Margin="28,16,0,0" Grid.Row="5" TextWrapping="Wrap" VerticalAlignment="Top" Width="300"/>
 
                         <StackPanel Grid.Row="6" Grid.Column="1" Orientation="Horizontal" Margin="25 15 0 0" >
-                            <RadioButton x:Name="rbPassport" Content="Passport" IsChecked="{Binding IsPassport, Mode=TwoWay}" Margin="0,5,0,372" Click="RadioButton_Click" />
-                            <RadioButton x:Name="rbIDcard" Content="ID card" IsChecked="{Binding IsIDcard, Mode=TwoWay}" Margin="25,5,0,372" Click="RadioButton_Click" />
-                            <RadioButton x:Name="rbOthers" Content="Other" IsChecked="{Binding IsIDcard, Mode=TwoWay}" Margin="25,5,0,372" Click="RadioButton_Click" />
+                            <RadioButton x:Name="rbPassport" Content="Passport" IsChecked="{Binding IsPassport, Mode=TwoWay}" Margin="0,5,0,0" Click="RadioButton_Click" />
+                            <RadioButton x:Name="rbIDcard" Content="ID card" IsChecked="{Binding IsIDcard, Mode=TwoWay}" Margin="25,5,0,0" Click="RadioButton_Click" />
+                            <RadioButton x:Name="rbOthers" Content="Other" IsChecked="{Binding IsIDcard, Mode=TwoWay}" Margin="25,5,0,0" Click="RadioButton_Click" />
                         </StackPanel>
 
-                        <Button Grid.Row="6" Grid.Column="1"
-                                 HorizontalAlignment="Left" VerticalAlignment="Top" x:Name="ScanIDCard" Padding="0 0" Height="35" Width="125" Margin="50,75,0,0" >
+                        <Button Grid.Row="7" Grid.Column="1"
+                                 HorizontalAlignment="Left" VerticalAlignment="Top" x:Name="ScanIDCard" Padding="0 0" Height="35" Width="125" Margin="20,17,0,0" >
                             Scan Front
                         </Button>
-                        <Button Grid.Row="6" Grid.Column="1"
-                                 HorizontalAlignment="Left" VerticalAlignment="Top" x:Name="ScanIDBackSide" Padding="0 0" Height="35" Width="125" Margin="278,73,0,0" >
+
+                        <Button Grid.Row="7" Grid.Column="1"
+                                 HorizontalAlignment="Left" VerticalAlignment="Top" x:Name="ScanIDBackSide" Padding="0 0" Height="35" Width="125" Margin="264,15,0,0" >
                             Scan Back
                         </Button>
+
+                        <Image x:Name="imgIdentityFront" Source="{Binding ImagePathfront}" Grid.Row="8" Grid.Column="0" Width="288" HorizontalAlignment="Left" Margin="12,9,0,215" MinWidth="250" MinHeight="400" Grid.ColumnSpan="2"/>
+
+                        <Image x:Name="imgIdentityBack" Source="{Binding ImagePathBack}" Grid.Row="8" Grid.Column="1" Width="306" HorizontalAlignment="Left" Margin="272,11,-60,162" MinWidth="250" MinHeight="400" Grid.ColumnSpan="2"/>
+
+
                     </Grid>
                 </TabItem.Content>
             </TabItem>
@@ -404,7 +413,7 @@
                 </TabItem.Content>
             </TabItem>
             <TabItem Name="Save" Header="Save" Padding="10 50 50 25" Grid.Row="1" Grid.Column="2" HorizontalContentAlignment="Center">
-                
+
             </TabItem>
         </TabControl>
 
