--- a/GuestRegistrationDeskUI/Views/MainScreenView.xaml
+++ b/GuestRegistrationDeskUI/Views/MainScreenView.xaml
@@ -111,12 +111,16 @@
                             <Grid >
 
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="61.181" />
-                                    <ColumnDefinition Width="270"/>
-                                    <ColumnDefinition Width="295" />
-                                    <ColumnDefinition Width="249*"/>
-                                    <ColumnDefinition Width="464*"/>
-                                    <ColumnDefinition Width="355*"/>
+                                    <ColumnDefinition Width="255*" />
+                                    <ColumnDefinition Width="255*"/>
+                                    <ColumnDefinition Width="255*" />
+                                    <ColumnDefinition Width="255*"/>
+                                    <ColumnDefinition Width="255*"/>
+                                    <ColumnDefinition Width="255*"/>
+                                    <ColumnDefinition Width="255*"/>
+
+
+
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="auto" MinHeight="35"/>
@@ -303,11 +307,12 @@
                         <TabItem.Content>
                             <Grid >
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="255*" />
-                                    <ColumnDefinition Width="255*" />
-                                    <ColumnDefinition Width="255*"/>
-                                    <ColumnDefinition Width="255*"/>
-                                    <ColumnDefinition Width="255*"/>
+                                    <ColumnDefinition Width="104*" />
+                                    <ColumnDefinition Width="208*"/>
+                                    <ColumnDefinition Width="227*" />
+                                    <ColumnDefinition Width="258*"/>
+                                    <ColumnDefinition Width="227*"/>
+                                    <ColumnDefinition Width="226*"/>
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="auto" MinHeight="35"/>
@@ -342,54 +347,54 @@
                                 <Label x:Name="lblLastName" Margin="30,11,0,11" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="79">Last Name</Label>
                                 <TextBox x:Name="txtLastName" Text="{Binding caLastName,Mode=TwoWay}" Grid.Row="3" Grid.Column="1" Margin="1,10,19,10" MinHeight="30"/> -->
                                 <Label x:Name="lblAddress" Margin="30,11,0,11.2" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="63">Address</Label>
-                                <TextBox x:Name="txtAddress" Text="{Binding Address,Mode=TwoWay}" Grid.Row="1" Grid.Column="1" Margin="0.8,9.8,19.4,9.4" MinHeight="30"/>
-                                <Label x:Name="lblCity" Margin="30,11.8,0,10.4" Grid.Row="1" Grid.Column="2" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="36">City</Label>
-                                <TextBox x:Name="txtCity" Text="{Binding City,Mode=TwoWay}" Grid.Row="1" Grid.Column="3" Margin="0.8,9.8,19.4,9.4" MinHeight="30"/>
-                                <Label x:Name="lblState" Margin="30,11.6,0,10.6" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="43">State</Label>
-                                <ComboBox x:Name="cmbstate" Text="{Binding State,Mode=TwoWay}" Grid.Row="2" Grid.Column="1" Margin="0.8,11.2,19.4,9" MinHeight="30"/>
+                                <TextBox x:Name="txtAddress" Text="{Binding Address,Mode=TwoWay}" Grid.Row="1" Grid.Column="2" Margin="1,10,19.2,9.2" MinHeight="30"/>
+                                <Label x:Name="lblCity" Margin="29.8,12,0,10.2" Grid.Row="1" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="36">City</Label>
+                                <TextBox x:Name="txtCity" Text="{Binding City,Mode=TwoWay}" Grid.Row="1" Grid.Column="4" Margin="1.2,10,19,9.2" MinHeight="30"/>
+                                <Label x:Name="lblState" Margin="30,11.8,0,10.4" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="43">State</Label>
+                                <ComboBox x:Name="cmbstate" Text="{Binding State,Mode=TwoWay}" Grid.Row="2" Grid.Column="2" Margin="1,11.8,19.2,8.4" MinHeight="30"/>
 
                                 <!--<TextBox x:Name="txtState" Text="{Binding State,Mode=TwoWay}" Grid.Row="3" Grid.Column="1" Margin="0.8,10.6,19.4,9.6" MinHeight="30"/>-->
-                                <Label x:Name="lblZip" Margin="30,11.4,0,10.8" Grid.Row="2" Grid.Column="2" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="31">Zip</Label>
-                                <TextBox x:Name="txtZip" Text="{Binding Zip,Mode=TwoWay}" Grid.Row="2" Grid.Column="3" Margin="0.8,10.4,19.4,9.8" MinHeight="30"/>
-                                <Label x:Name="lblEmail" Margin="30,11.2,0,11" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="102">Email Address</Label>
-                                <TextBox x:Name="txtEmail" Text="{Binding Email,Mode=TwoWay}" Grid.Row="3" Grid.Column="1" Margin="0.8,10.2,19.4,10" MinHeight="30"/>
-                                <Label x:Name="lblCellPhone" Margin="30,11,0,11.2" Grid.Row="3" Grid.Column="2" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="80">Cell Phone</Label>
-                                <TextBox x:Name="txtCellPhone" Text="{Binding CellPhone,Mode=TwoWay}" Grid.Row="3" Grid.Column="3" Margin="0.8,10,19.4,10.2" MinHeight="30"/>
-                                <Label x:Name="lblHomePhone" Margin="30,11.8,0,11.4" Grid.Row="4" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="28" Width="95">Home Phone</Label>
-                                <TextBox x:Name="txtHomePhone" Text="{Binding Homephone,Mode=TwoWay}" Grid.Row="4" Grid.Column="1" Margin="0.8,9.8,19.4,9.4" MinHeight="30"/>
-                                <Label x:Name="lblSecurityNo" Margin="30,11.6,0,10.6" Grid.Row="4" Grid.Column="2" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="164">Social Security Number</Label>
-                                <TextBox x:Name="txtSecurityNo" Text="{Binding SecurityNo,Mode=TwoWay}" Grid.Row="4" Grid.Column="3" Margin="0.8,10.6,19.4,9.6" MinHeight="30"/>
-                                <Label x:Name="lblConvictedFelony" Margin="30,12.4,0,10" Grid.Row="5" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="28" Width="282">Have you ever been convicted of a felony</Label>
+                                <Label x:Name="lblZip" Margin="29.8,11.8,0,10.4" Grid.Row="2" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="31">Zip</Label>
+                                <TextBox x:Name="txtZip" Text="{Binding Zip,Mode=TwoWay}" Grid.Row="2" Grid.Column="4" Margin="1.2,10.8,19,9.4" MinHeight="30"/>
+                                <Label x:Name="lblEmail" Margin="30,11.6,0,10.6" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="102" Grid.ColumnSpan="2">Email Address</Label>
+                                <TextBox x:Name="txtEmail" Text="{Binding Email,Mode=TwoWay}" Grid.Row="3" Grid.Column="2" Margin="1,10.6,19.2,9.6" MinHeight="30"/>
+                                <Label x:Name="lblCellPhone" Margin="29.8,11.6,0,10.6" Grid.Row="3" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="80">Cell Phone</Label>
+                                <TextBox x:Name="txtCellPhone" Text="{Binding CellPhone,Mode=TwoWay}" Grid.Row="3" Grid.Column="4" Margin="1.2,9.6,19,10.6" MinHeight="30"/>
+                                <Label x:Name="lblHomePhone" Margin="30,12.4,0,10.8" Grid.Row="4" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="28" Width="95" Grid.ColumnSpan="2">Home Phone</Label>
+                                <TextBox x:Name="txtHomePhone" Text="{Binding Homephone,Mode=TwoWay}" Grid.Row="4" Grid.Column="2" Margin="1,9.4,19.2,9.8" MinHeight="30"/>
+                                <Label x:Name="lblSecurityNo" Margin="29.8,11.4,0,10.8" Grid.Row="4" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="164">Social Security Number</Label>
+                                <TextBox x:Name="txtSecurityNo" Text="{Binding SecurityNo,Mode=TwoWay}" Grid.Row="4" Grid.Column="4" Margin="1.2,10.4,19,9.8" MinHeight="30"/>
+                                <Label x:Name="lblConvictedFelony" Margin="30,13.2,0,10" Grid.Row="5" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="28" Width="282" Grid.ColumnSpan="2">Have you ever been convicted of a felony</Label>
                                 <!--<StackPanel Grid.Row="9" Grid.Column="1" Orientation="Horizontal" Margin="1,10,19,10" MinHeight="30" Grid.RowSpan="3">
                                     <RadioButton Content="YES" IsChecked="{Binding IsYes, Mode=TwoWay}" Margin="0,10,0,10" MinHeight="30"/>
                                     <RadioButton Content="NO" IsChecked="{Binding IsNo, Mode=TwoWay}" Margin="0,10,0,10" MinHeight="30"/>
                                 </StackPanel>-->
-                                <ComboBox x:Name="CcFelony" Text="{Binding CFelony,Mode=TwoWay}" Grid.Row="5" Grid.Column="1" Margin="0.8,10.4,19.4,9.8" MinHeight="30"/>
+                                <ComboBox x:Name="CcFelony" Text="{Binding CFelony,Mode=TwoWay}" Grid.Row="5" Grid.Column="2" Margin="1,10.2,19.2,10" MinHeight="30"/>
 
-                                <Label x:Name="lblCompanyName" Margin="30,20.2,0,16.4" Grid.Row="6" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="115">Company Name</Label>
-                                <ComboBox x:Name="CCompanyName" Text="{Binding CompanyName, Mode=TwoWay}" Grid.Row="6" Grid.Column="1" Margin="0.8,20,19.4,9.6" MinHeight="30" SelectionChanged="VisitorCompanyName_SelectionChanged" ContextMenuClosing="VisitorCompanyName_ContextMenuClosing" DropDownClosed="VisitorCompanyName_DropDownClosed"/>
+                                <Label x:Name="lblCompanyName" Margin="30,20,0,16.6" Grid.Row="6" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="115" Grid.ColumnSpan="2">Company Name</Label>
+                                <ComboBox x:Name="CCompanyName" Text="{Binding CompanyName, Mode=TwoWay}" Grid.Row="6" Grid.Column="2" Margin="1,20,19.2,9.6" MinHeight="30" SelectionChanged="VisitorCompanyName_SelectionChanged" ContextMenuClosing="VisitorCompanyName_ContextMenuClosing" DropDownClosed="VisitorCompanyName_DropDownClosed"/>
 
-                                <TextBox x:Name="txtCompanyName" Text="{Binding CompanyName,Mode=TwoWay}" Grid.Row="7" Grid.Column="1" Margin="0.6,10.2,18.6,9.4" MinHeight="30"/>
+                                <TextBox x:Name="txtCompanyName" Text="{Binding CompanyName,Mode=TwoWay}" Grid.Row="7" Grid.Column="2" Margin="1,10.4,18.2,8.8" MinHeight="30"/>
                                 <!--  <Label x:Name="lblIdNo" Margin="30,11.6,0,10.6" Grid.Row="12" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="115">Id Card Number</Label>
                                 <TextBox x:Name="txtIdNo" Text="{Binding IdNo,Mode=TwoWay}" Grid.Row="12" Grid.Column="1" Margin="0.8,10.6,19.4,9.6" MinHeight="30" />-->
-                                <Label x:Name="lblPassportNo" Margin="30,12.4,0,10.4" Grid.Row="8" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="30" Width="125">Passport Number</Label>
-                                <TextBox x:Name="txtPassportNo" Text="{Binding PassportNo,Mode=TwoWay}" Grid.Row="8" Grid.Column="1" Margin="0.8,10.4,19.4,9.4" MinHeight="30"/>
-                                <Label x:Name="lblDateandPlaceofIssue" Margin="30,11.6,0,10.6" Grid.Row="7" Grid.Column="2" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="227">Passport Date And Place Of Issue</Label>
-                                <TextBox x:Name="txtDateandPlaceofIssue" Text="{Binding DateandPlaceofIssue,Mode=TwoWay}" Grid.Row="7" Grid.Column="3" Margin="0.8,10.6,19.4,9.6" MinHeight="30"/>
-                                <Label x:Name="lblPassportValidity" Margin="30,12.4,0,10.8" Grid.Row="9" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="28" Width="127">Passport Valid Till</Label>
-                                <TextBox x:Name="txtPassportValidty" Text="{Binding PassportValidity,Mode=TwoWay}" Grid.Row="9" Grid.Column="1" Margin="0.8,10.4,19.4,8.8" MinHeight="30"/>
-                                <Label x:Name="lblPurposeOfVisit1" Margin="30,12.2,0,10" Grid.Row="5" Grid.Column="2" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="116">Purpose Of Visit</Label>
-                                <ComboBox x:Name="caPurposeforVisit" Text="{Binding caPurposeOfVisit,Mode=TwoWay}" Grid.Row="5" Grid.Column="3" Margin="0.8,11.2,19.4,9" MinHeight="30"/>
+                                <Label x:Name="lblPassportNo" Margin="30,12.2,0,10.6" Grid.Row="8" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="30" Width="125" Grid.ColumnSpan="2">Passport Number</Label>
+                                <TextBox x:Name="txtPassportNo" Text="{Binding PassportNo,Mode=TwoWay}" Grid.Row="8" Grid.Column="2" Margin="1,10.2,19.2,9.6" MinHeight="30"/>
+                                <Label x:Name="lblDateandPlaceofIssue" Margin="29.8,11.4,0,10.8" Grid.Row="7" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="227">Passport Date And Place Of Issue</Label>
+                                <TextBox x:Name="txtDateandPlaceofIssue" Text="{Binding DateandPlaceofIssue,Mode=TwoWay}" Grid.Row="7" Grid.Column="4" Margin="1.2,10.4,19,9.8" MinHeight="30"/>
+                                <Label x:Name="lblPassportValidity" Margin="30,12.4,0,10.8" Grid.Row="9" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="28" Width="127" Grid.ColumnSpan="2">Passport Valid Till</Label>
+                                <TextBox x:Name="txtPassportValidty" Text="{Binding PassportValidity,Mode=TwoWay}" Grid.Row="9" Grid.Column="2" Margin="1,10.4,19.2,8.8" MinHeight="30"/>
+                                <Label x:Name="lblPurposeOfVisit1" Margin="29.8,12.2,0,10" Grid.Row="5" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="116">Purpose Of Visit</Label>
+                                <ComboBox x:Name="caPurposeforVisit" Text="{Binding caPurposeOfVisit,Mode=TwoWay}" Grid.Row="5" Grid.Column="4" Margin="1.2,11.2,19,9" MinHeight="30"/>
 
 
                                 <!---<TextBox x:Name="txtPurposeOfVisit1" Text="{Binding caPurposeOfVisit ,Mode=TwoWay}" Grid.Row="17" Grid.Column="1" Margin="1,10,19,10" MinHeight="30"/>-->
-                                <Label x:Name="lblDuration" Margin="30,12,0,10.2" Grid.Row="6" Grid.Column="2" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="68">Duration</Label>
+                                <Label x:Name="lblDuration" Margin="29.8,19,0,17.6" Grid.Row="6" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="68">Duration</Label>
                                 <!-- <TextBox x:Name="txtDuration" Text="{Binding Duration,Mode=TwoWay}" Grid.Row="17" Grid.Column="1" Margin="0.8,11,19.4,9.2" MinHeight="30"/>-->
-                                <DatePicker x:Name="datepicker" Text="{Binding Duration,Mode=TwoWay}" Grid.Row="6" Grid.Column="3" Margin="0.8,11,19.4,9.2" MinHeight="30"/>
+                                <DatePicker x:Name="datepicker" Text="{Binding Duration,Mode=TwoWay}" Grid.Row="6" Grid.Column="4" Margin="1.2,11,19,8.6" MinHeight="30"/>
                                 <!--  <DatePicker x:Name="datepicker1" Text="{Binding Durationto,Mode=TwoWay}" Grid.Row="17" Grid.Column="2" Margin="0.8,11,19.4,9.2" MinHeight="30"/>-->
 
-                                <Label x:Name="lblEmergencyContactNo" Margin="30,11.8,0,10.4" Grid.Row="8" Grid.Column="2" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="161">Emergency Contact No</Label>
-                                <TextBox x:Name="txtEmergencyContactNo" Text="{Binding EmergencyContactNo,Mode=TwoWay}" Grid.Row="8" Grid.Column="3" Margin="0.8,10.8,19.4,9.4" MinHeight="30"/>
+                                <Label x:Name="lblEmergencyContactNo" Margin="29.8,13.2,0,10.6" Grid.Row="8" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="161">Emergency Contact No</Label>
+                                <TextBox x:Name="txtEmergencyContactNo" Text="{Binding EmergencyContactNo,Mode=TwoWay}" Grid.Row="8" Grid.Column="4" Margin="1.2,11.2,19,8.6" MinHeight="30"/>
                             </Grid>
                         </TabItem.Content>
                     </TabItem>
