--- a/GuestRegistrationDeskUI/Views/MainScreenView.xaml
+++ b/GuestRegistrationDeskUI/Views/MainScreenView.xaml
@@ -105,7 +105,7 @@
             <TabItem Name="VisitorDetails" Header="Additional Details" Padding="25 50 50 25" Margin="0 0 0 0" VerticalAlignment="Center">
 
                 <TabControl TabStripPlacement="Top" Margin="-2,17,239.4,-284" Padding="0 0 0 0" FontSize="14" Height="1188" VerticalAlignment="Top" SelectionChanged="TabControl_SelectionChanged" RenderTransformOrigin="0.504,0.676" Background="CadetBlue">
-                   
+
                     <TabItem Name="ConsultantApplicationForm" Width="250" Header="Consultant Application Form">
                         <TabItem.Content>
                             <Grid >
@@ -173,10 +173,8 @@
                                     <RadioButton Content="NO" IsChecked="{Binding IsNo, Mode=TwoWay}" Margin="0,10,0,10" MinHeight="30"/>
                                 </StackPanel>-->
                                 <ComboBox x:Name="CcFelony" Text="{Binding CFelony,Mode=TwoWay}" Grid.Row="5" Grid.Column="2" Margin="1,10.2,19.2,10" MinHeight="30"/>
-
                                 <Label x:Name="lblCompanyName" Margin="30,20,0,16.6" Grid.Row="6" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="115" Grid.ColumnSpan="2">Company Name</Label>
                                 <ComboBox x:Name="CCompanyName" Text="{Binding CompanyName, Mode=TwoWay}" Grid.Row="6" Grid.Column="2" Margin="1,20,19.2,9.6" MinHeight="30" SelectionChanged="VisitorCompanyName_SelectionChanged" ContextMenuClosing="VisitorCompanyName_ContextMenuClosing" DropDownClosed="VisitorCompanyName_DropDownClosed"/>
-
                                 <TextBox x:Name="txtCompanyName" Text="{Binding CompanyName,Mode=TwoWay}" Grid.Row="7" Grid.Column="2" Margin="1,10.4,18.2,8.8" MinHeight="30"/>
                                 <!--  <Label x:Name="lblIdNo" Margin="30,11.6,0,10.6" Grid.Row="12" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="115">Id Card Number</Label>
                                 <TextBox x:Name="txtIdNo" Text="{Binding IdNo,Mode=TwoWay}" Grid.Row="12" Grid.Column="1" Margin="0.8,10.6,19.4,9.6" MinHeight="30" />-->
@@ -186,23 +184,26 @@
                                 <TextBox x:Name="txtDateandPlaceofIssue" Text="{Binding DateandPlaceofIssue,Mode=TwoWay}" Grid.Row="7" Grid.Column="4" Margin="1.2,10.4,19,9.8" MinHeight="30"/>
                                 <Label x:Name="lblDateandPlaceofIssue1" Margin="29.8,11.4,0,10.8" Grid.Row="8" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="227">Passport Date Of Issue</Label>
                                 <DatePicker x:Name="datepicker1" Text="{Binding PDateofIssue,Mode=TwoWay}" Grid.Row="8" Grid.Column="4" Margin="1.2,11,19,8.6" MinHeight="30"/>
-
-
                                 <Label x:Name="lblPassportValidity" Margin="30,12.4,0,10.8" Grid.Row="9" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="28" Width="127" Grid.ColumnSpan="2">Passport Valid Till</Label>
                                 <TextBox x:Name="txtPassportValidty" Text="{Binding PassportValidity,Mode=TwoWay}" Grid.Row="9" Grid.Column="2" Margin="1,10.4,19.2,8.8" MinHeight="30"/>
-                               
+
                                 <Label x:Name="lblPurposeOfVisit1" Margin="29.8,12.2,0,10" Grid.Row="5" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="116">Purpose Of Visit</Label>
                                 <ComboBox x:Name="caPurposeforVisit" Text="{Binding caPurposeOfVisit,Mode=TwoWay}" Grid.Row="5" Grid.Column="4" Margin="1.2,11.2,19,9" MinHeight="30"/>
-
-
                                 <!---<TextBox x:Name="txtPurposeOfVisit1" Text="{Binding caPurposeOfVisit ,Mode=TwoWay}" Grid.Row="17" Grid.Column="1" Margin="1,10,19,10" MinHeight="30"/>-->
                                 <Label x:Name="lblDuration" Margin="29.8,19,0,17.6" Grid.Row="6" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="68">Duration</Label>
                                 <!-- <TextBox x:Name="txtDuration" Text="{Binding Duration,Mode=TwoWay}" Grid.Row="17" Grid.Column="1" Margin="0.8,11,19.4,9.2" MinHeight="30"/>-->
                                 <DatePicker x:Name="datepicker" Text="{Binding Duration,Mode=TwoWay}" Grid.Row="6" Grid.Column="4" Margin="1.2,11,19,8.6" MinHeight="30"/>
                                 <!--  <DatePicker x:Name="datepicker1" Text="{Binding Durationto,Mode=TwoWay}" Grid.Row="17" Grid.Column="2" Margin="0.8,11,19.4,9.2" MinHeight="30"/>-->
-
                                 <Label x:Name="lblEmergencyContactNo" Margin="29.8,13.2,0,10.6" Grid.Row="9" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="161">Emergency Contact No</Label>
                                 <TextBox x:Name="txtEmergencyContactNo" Text="{Binding EmergencyContactNo,Mode=TwoWay}" Grid.Row="9" Grid.Column="4" Margin="1.2,11.2,19,8.6" MinHeight="30"/>
+
+                                <Label x:Name="lblPreviousresidences" Margin="30,19.6,0,17" Grid.Row="11" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="334" Grid.ColumnSpan="2">Previous Residences for the last seven years</Label>
+                                <TextBox x:Name="txtPResidences" Text="{Binding PResidence,Mode=TwoWay}" Grid.Row="11" Grid.Column="2" Margin="1.2,11.6,19,10.2" MinHeight="30" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible" Grid.ColumnSpan="3" Grid.RowSpan="5"/>
+
+
+
+
+
                             </Grid>
                         </TabItem.Content>
                     </TabItem>
@@ -325,7 +326,7 @@
 
                         </TabItem.Content>
                     </TabItem>
-                    
+
                     <TabItem Name="VisitorLogBook" Width="250" Header="Visitor Log Book">
                         <TabItem.Content>
                             <Grid>
