--- a/GuestRegistrationDeskUI/Views/MainScreenView.xaml
+++ b/GuestRegistrationDeskUI/Views/MainScreenView.xaml
@@ -424,16 +424,16 @@
                             <RowDefinition Height="auto"/>
                             <RowDefinition Height="auto"/>
                         </Grid.RowDefinitions>
-                        <Button Grid.Row="0" Grid.Column="1" Padding="10 5" Width="150" Height="50" Margin="10,0,0,0"
+                        <Button Grid.Row="0" Padding="10 5" Width="178" Height="35" Margin="124,11,0,11.8"
                                  HorizontalAlignment="Left" x:Name="GenerateVisitorDocument" Content="Visitor" />
-                        <Button Grid.Row="0" Padding="10 5" Width="150" Height="50" Margin="210,11,641,11"
-                                 HorizontalAlignment="Center" x:Name="GenerateContractDocument" Content="Contract" />
+                        <Button Grid.Row="0" Padding="10 5" Width="178" Height="35" Margin="353,11,648.2,11.8"
+                                 HorizontalAlignment="Center" x:Name="GenerateContractDocument" Content="Contract" Click="GenerateContractDocument_Click" />
 
                         <!--<ComboBox x:Name="printerComboBox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="503,17,0,0"/>-->
 
-                        <ComboBox Grid.Row="0" Name="cmbPrinterSelection" ItemsSource="{x:Static Printing:PrinterSettings.InstalledPrinters}" SelectionChanged="cmbPrinterSelection_SelectionChanged" Margin="603,21,282,19" />
+                        <ComboBox Grid.Row="0" Name="cmbPrinterSelection" ItemsSource="{x:Static Printing:PrinterSettings.InstalledPrinters}" SelectionChanged="cmbPrinterSelection_SelectionChanged" Margin="588,18,416.2,22" />
 
-                        <Button Grid.Row="0" Padding="10 5" Width="190" Height="50" Margin="759,10,-257,11.2"
+                        <Button Grid.Row="0" Padding="10 5" Width="178" Height="35" Margin="805,18,196.2,18.2"
                                  HorizontalAlignment="Center" x:Name="GenerateTempBadge" Click="GenerateTempBadge_Click" RenderTransformOrigin="0.5,0.504" >
                             Print Document
                         </Button>
