--- a/GuestRegistrationDeskUI/Views/MainScreenView.xaml
+++ b/GuestRegistrationDeskUI/Views/MainScreenView.xaml
@@ -220,8 +220,8 @@
                                     <ColumnDefinition Width="255*" />
                                     <ColumnDefinition Width="255*" />
                                     <ColumnDefinition Width="255*"/>
-                                    <ColumnDefinition Width="255*"/>
-                                    <ColumnDefinition Width="255*"/>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="auto" MinHeight="35"/>
@@ -234,11 +234,11 @@
                                 </Grid.RowDefinitions>
                                 <!--  <Label x:Name="lblName" Margin="30,11,0,11" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Name</Label>
                                 <TextBox x:Name="txtName" Text="{Binding caForvName,Mode=TwoWay}" Grid.Row="1" Grid.Column="1" Margin="1,10,359,10" MinHeight="30" Grid.ColumnSpan="2"/>-->
-                                <Label x:Name="lblTitle" Margin="30,11,0,11" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Title</Label>
-                                <TextBox x:Name="txtTitle" Text="{Binding Title,Mode=TwoWay}" Grid.Row="2" Grid.Column="1" Margin="1,10,359,10" MinHeight="30" Grid.ColumnSpan="2"/>
-                                <Label x:Name="lblCompany1" Margin="30,11,0,11" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Company</Label>
-                                <ComboBox x:Name="cavCompanyName" Text="{Binding cavCompany, Mode=TwoWay}" Grid.Row="3" Grid.Column="1" Margin="1,10,19,10" MinHeight="30" SelectionChanged="VisitorCompanyName_SelectionChanged" ContextMenuClosing="VisitorCompanyName_ContextMenuClosing" DropDownClosed="VisitorCompanyName_DropDownClosed"/>
-                                <TextBox x:Name="txtcavCompany" Text="{Binding cavCompany, Mode=TwoWay}" Grid.Row="3" Grid.Column="2" Margin="1,10,19,10" MinHeight="30" />
+                                <Label x:Name="lblTitle" Margin="30,11.6,0,11.6" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="28" Width="38">Title</Label>
+                                <TextBox x:Name="txtTitle" Text="{Binding Title,Mode=TwoWay}" Grid.Row="2" Grid.Column="1" Margin="1,10.4,17.6,9.8" MinHeight="30" />
+                                <Label x:Name="lblCompany1" Margin="30,11.4,0,10.8" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="72">Company</Label>
+                                <ComboBox x:Name="cavCompanyName" Text="{Binding cavCompany, Mode=TwoWay}" Grid.Row="3" Grid.Column="1" Margin="0.6,10.4,19,9.8" MinHeight="30" SelectionChanged="VisitorCompanyName_SelectionChanged" ContextMenuClosing="VisitorCompanyName_ContextMenuClosing" DropDownClosed="VisitorCompanyName_DropDownClosed"/>
+                                <TextBox x:Name="txtcavCompany" Text="{Binding cavCompany, Mode=TwoWay}" Grid.Row="3" Grid.Column="2" Margin="1,10.4,17.6,9.8" MinHeight="30" />
 
                                 <!--<Label x:Name="lblDate1" Margin="30,11,0,11" Grid.Row="4" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Date</Label>
                                 <TextBox x:Name="txtDate1" Text="{Binding cavDate,Mode=TwoWay}" Grid.Row="4" Grid.Column="1" Margin="1,10,359,10" MinHeight="30" Grid.ColumnSpan="2"/>-->
@@ -332,7 +332,7 @@
                         </TabItem.Content>
                     </TabItem>
 
-                    <TabItem Name="VisitorLogBook" Width="250" Header="Visitor Log Book">
+                    <!-- <TabItem Name="VisitorLogBook" Width="250" Header="Visitor Log Book">
                         <TabItem.Content>
                             <Grid>
                                 <Grid.ColumnDefinitions>
@@ -378,8 +378,8 @@
                                 <TextBox x:Name="txtEmployeeName" Text="{Binding EmployeetobeVisited, Mode=TwoWay}" Grid.Row="9" Grid.Column="1" Margin="1,10,274,10" MinHeight="30" Grid.ColumnSpan="3"/>
                             </Grid>
                         </TabItem.Content>
-                    </TabItem>
-                    <TabItem Name="HSALog" Width="250" Header="HSA Log">
+                    </TabItem>-->
+                    <!--<TabItem Name="HSALog" Width="250" Header="HSA Log">
                         <TabItem.Content>
                             <Grid>
                                 <Grid.ColumnDefinitions>
@@ -395,9 +395,9 @@
                                     <RowDefinition Height="auto" MinHeight="35"/>
                                     <RowDefinition Height="auto" MinHeight="35"/>
                                     <RowDefinition Height="auto" MinHeight="35"/>
-                                    <RowDefinition/>
+                                    <RowDefinition
                                 </Grid.RowDefinitions>
-                                <!-- HighlySecurityControlAreaLog -->
+                                 HighlySecurityControlAreaLog 
                                 <Label x:Name="lblVisitorName1" Margin="30,0,0,0" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Visitor's / Company Name</Label>
                                 <TextBox x:Name="txtVisitorName1" Text="{Binding VistorsAndCompanyName,Mode=TwoWay}" Grid.Row="1" Grid.Column="1" Margin="0,10,0,10" MinHeight="30"/>
                                 <Label x:Name="lblPurposeVisit" Margin="30,0,0,0" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Purpose of the Visit</Label>
@@ -412,7 +412,7 @@
                                 <TextBox x:Name="txtDepartureTime1" Text="{Binding hscDepartureTime,Mode=TwoWay}" Grid.Row="6" Grid.Column="1" Margin="0,10,0,10" MinHeight="30"/>
                             </Grid>
                         </TabItem.Content>
-                    </TabItem>
+                    </TabItem>-->
                 </TabControl>
             </TabItem>
             <TabItem Name="GenerateDocuments" Header="Generate Document" Grid.Row="1" Grid.Column="2"  Padding="25 50 50 25">
