--- a/GuestRegistrationDeskUI/Views/LoginView.xaml
+++ b/GuestRegistrationDeskUI/Views/LoginView.xaml
@@ -23,18 +23,15 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" Margin="0 0 0 20"
-                   HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="28" FontFamily="Segoe UI Light">
-            Login Form
-        </TextBlock>
+    
 
         <TextBlock Grid.Row="2" Grid.Column="1" Margin="0 0 5 10" VerticalAlignment="Center" HorizontalAlignment="Center">
-            Username:
+            Username
         </TextBlock>
         <TextBox x:Name="UserName" Grid.Row="2" Grid.Column="2" Width="200" Margin="0 0 0 10" FontSize="16"/>
 
         <TextBlock Grid.Row="3" Grid.Column="1" Margin="0 0 5 10" VerticalAlignment="Center" HorizontalAlignment="Center">
-            Password:
+            Password
         </TextBlock>
         <PasswordBox x:Name="Password" Grid.Row="3" Grid.Column="2" Width="200" Margin="0 0 0 10" FontSize="16"/>
 
